--- a/codebase/apps/Radx/src/_makefiles/makefile.lrose-core
+++ b/codebase/apps/Radx/src/_makefiles/makefile.lrose-core
@@ -10,6 +10,7 @@ SUB_DIRS = \
 	Ascii2Radx \
 	Dsr2Radx \
 	FixCfradialPaths \
+	FixFieldVals \
 	FixRadxPointing \
 	FixRadxValues \
 	Radx2Dsr \
@@ -42,6 +43,7 @@ SUB_DIRS = \
 	RadxQpe \
 	RadxRate \
 	RadxSunMon \
+        RadxStats \
         RadxTimeStats \
         RadxVolTimingStats
 
