cmake - updating for changes to Radx and radar libs

--- a/codebase/apps/Radx/src/CMakeLists.txt
+++ b/codebase/apps/Radx/src/CMakeLists.txt
@@ -15,6 +15,7 @@ project (LROSE-CORE)
 add_subdirectory (Ascii2Radx)
 add_subdirectory (Dsr2Radx)
 add_subdirectory (FixCfradialPaths)
+add_subdirectory (FixFieldVals)
 add_subdirectory (FixRadxPointing)
 add_subdirectory (FixRadxValues)
 add_subdirectory (Radx2Dsr)
