--- a/codebase/libs/radar/src/moments/Makefile
+++ b/codebase/libs/radar/src/moments/Makefile
@@ -25,10 +25,10 @@ HDRS = \
 	../include/radar/GateData.hh \
 	../include/radar/MomentsFields.hh \
 	../include/radar/InterestMap.hh \
+	../include/radar/MatrixRegrFilter.hh \
 	../include/radar/NoiseLocator.hh \
 	../include/radar/RadarFft.hh \
 	../include/radar/RadarMoments.hh \
-	../include/radar/RegressionFilter.hh \
 	../include/radar/Sz864.hh
 
 CPPC_SRCS = \
@@ -41,11 +41,11 @@ CPPC_SRCS = \
 	InterestMap.cc \
 	IwrfMoments.cc \
 	IwrfMomReader.cc \
+	MatrixRegrFilter.cc \
 	NoiseLocator.cc \
 	PhaseCoding.cc \
 	RadarFft.cc \
 	RadarMoments.cc \
-	RegressionFilter.cc \
 	Sz864.cc
 
 #
