Updating CMakeLists to match Makefiles

--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -67,6 +67,7 @@ add_subdirectory (StaggeredLimits)
 add_subdirectory (SunCal)
 add_subdirectory (SunCpCompute)
 add_subdirectory (SweepInfo2Spdb)
+add_subdirectory (TerrainHtServer)
 add_subdirectory (Ts2NetCDF)
 add_subdirectory (TsCalAuto)
 add_subdirectory (TsConvert)
