--- a/codebase/apps/radar/src/TerrainHtServer/CMakeLists.txt
+++ b/codebase/apps/radar/src/TerrainHtServer/CMakeLists.txt
@@ -2,101 +2,25 @@
 #
 # CMakeLists.txt file for cmake
 #
-# app name: HawkEdit
+# app name: TerrainHtServer
 #
 # written by script createCMakeLists.py
 #
-# dir: lrose-core/codebase/apps/radar/src/HawkEdit
+# dir: lrose-core/codebase/apps/radar/src/TerrainHtServer
 ###############################################################
 
-project (HawkEdit)
+project (TerrainHtServer)
 
 # source files
 
 set (SRCS
       Params.cc
-      AllocCheck.cc
       Args.cc
-      Beam.cc
-      BoundaryPointEditorModel.cc
-      BoundaryView.cc
-      ColorMap.cc
-      ColorTableManager.cc
-      DataModel.cc
-      ScriptsDataModel.cc
-      ScriptsDataController.cc
-      DisplayField.cc
-      DisplayFieldModel.cc
-      DisplayFieldController.cc
-      FlowLayout.cc
-      HawkEye.cc
-      HawkEyeLogger.cc
       Main.cc
-      PaletteManager.cc
-      ParamFile.cc
-      PpiBeam.cc
-      RayLocationController.cc
-      RayLocationModel.cc
-      Reader.cc
-      ScaledLabel.cc
-      ScriptEditorModel.cc
-      SiiPalette.cc
-      SoloDefaultColorWrapper.cc
-      SoloFunctionsModel.cc
-      SoloScriptTranslator.cc
-      SpreadSheetItem.cc
-      SpreadSheetModel.cc
-      SpreadSheetUtils.cc
-      SweepModel.cc
-      SweepController.cc
-      TimeNavModel.cc
-      TimeNavController.cc
-      UndoRedoController.cc
-      UndoRedoModel.cc
-      WorldPlot.cc
-      FieldRendererView.cc
-      FieldListView.cc
-      FieldRendererController.cc
-      PolarManager.cc
-      PolarWidget.cc
-      TimeScaleWidget.cc
-      ParameterColorView.cc
-      FieldColorController.cc
-      BoundaryPointEditor.cc
-      BoundaryPointEditorView.cc
-      CloseEventFilter.cc
-      ColorBar.cc
-      ColorMapTemplates.cc
-      ClickableLabel.cc
-      ClickableLabelNamed.cc
-      DisplayFieldView.cc
-      ScriptEditorView.cc
-      ScriptEditorController.cc
-      ScriptEditorHelpItem.cc
-      ScriptEditorHelpModel.cc
-      TextEdit.cc
-      SoloFunctionsController.cc
-      SpreadSheetView.cc
-      SpreadSheetController.cc
-      SpreadSheetDelegate.cc
-      SweepView.cc
-      TimeNavView.cc
-      FunctionEditor.cc
+      ServerThread.cc
+      SquareDegree.cc
+      TerrainHtServer.cc
     )
-
-# QT5
-
-set (CMAKE_INCLUDE_CURRENT_DIR ON)
-set (CMAKE_AUTOMOC ON)
-set (CMAKE_AUTORCC ON)
-set (CMAKE_AUTOUIC ON)
-find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
-
-pkg_search_module(Qt5Core REQUIRED)
-pkg_search_module(Qt5Gui REQUIRED)
-pkg_search_module(Qt5Widgets REQUIRED)
-pkg_search_module(Qt5Network REQUIRED)
-pkg_search_module(Qt5Qml REQUIRED)
 
 # include directories
 
@@ -148,12 +72,6 @@ if(IS_DIRECTORY /usr/local/include)
   include_directories (/usr/local/include)
 endif()
 
-include_directories(${Qt5Core_INCLUDE_DIRS})
-include_directories(${Qt5Gui_INCLUDE_DIRS})
-include_directories(${Qt5Widgets_INCLUDE_DIRS})
-include_directories(${Qt5Network_INCLUDE_DIRS})
-include_directories(${Qt5Qml_INCLUDE_DIRS})
-
 # link directories
 
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
@@ -182,37 +100,18 @@ endif()
 
 # link libs
 
-link_libraries (radar)
-link_libraries (Mdv)
-link_libraries (Spdb)
-link_libraries (rapformats)
-link_libraries (Fmq)
-link_libraries (Radx)
-link_libraries (Solo)
-link_libraries (Ncxx)
-link_libraries (dsserver)
-link_libraries (didss)
-link_libraries (euclid)
-link_libraries (physics)
-link_libraries (rapmath)
 link_libraries (toolsa)
-link_libraries (dataport)
 link_libraries (tdrp)
+link_libraries (dataport)
+link_libraries (Ncxx)
 link_libraries (netcdf)
 link_libraries (hdf5_hl)
 link_libraries (hdf5)
 link_libraries (z)
 link_libraries (bz2)
-link_libraries (fftw3)
 link_libraries (bz2)
 link_libraries (z)
 link_libraries (pthread)
-link_libraries (m)
-link_libraries (${Qt5Core_LIBRARIES})
-link_libraries (${Qt5Gui_LIBRARIES})
-link_libraries (${Qt5Widgets_LIBRARIES})
-link_libraries (${Qt5Network_LIBRARIES})
-link_libraries (${Qt5Qml_LIBRARIES})
 
 # If needed, generate TDRP Params.cc and Params.hh files
 # from their associated paramdef.<app> file
@@ -220,7 +119,7 @@ link_libraries (${Qt5Qml_LIBRARIES})
 makeTdrpParams()
 # application
 
-add_executable (HawkEdit ${SRCS})
+add_executable (TerrainHtServer ${SRCS})
 
 # add tdrp_gen as a dependency
 add_dependencies(${PROJECT_NAME} tdrp_gen)
