Adding DwellSpectra to libs/radar

--- a/codebase/libs/radar/src/moments/Makefile
+++ b/codebase/libs/radar/src/moments/Makefile
@@ -35,6 +35,7 @@ CPPC_SRCS = \
 	AlternatingVelocity.cc \
 	AtmosAtten.cc \
 	ClutFilter.cc \
+	DwellSpectra.cc \
 	ForsytheRegrFilter.cc \
 	GateData.cc \
 	MomentsFields.cc \
