adding apps/radar/TerrainHtServer, apps/radar/TsMaxPower2Fmq to core build

--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -67,11 +67,13 @@ add_subdirectory (StaggeredLimits)
 add_subdirectory (SunCal)
 add_subdirectory (SunCpCompute)
 add_subdirectory (SweepInfo2Spdb)
+add_subdirectory (TerrainHtServer)
 add_subdirectory (Ts2NetCDF)
 add_subdirectory (TsCalAuto)
 add_subdirectory (TsConvert)
 add_subdirectory (TsFile2Fmq)
 add_subdirectory (TsFmq2Tcp)
+add_subdirectory (TsMaxPower2Fmq)
 add_subdirectory (TsGamic2Iwrf)
 add_subdirectory (TsMerge)
 add_subdirectory (TsOverlay)
