--- a/codebase/apps/radar/src/TsMaxPower2Fmq/CMakeLists.txt
+++ b/codebase/apps/radar/src/TsMaxPower2Fmq/CMakeLists.txt
@@ -22,25 +22,37 @@ set (SRCS
 
 # include directories
 
-include_directories (../../../../libs/tdrp/src/include)
-include_directories (../../../../libs/dataport/src/include)
-include_directories (../../../../libs/euclid/src/include)
-include_directories (../../../../libs/physics/src/include)
+include_directories (../../../../libs/FiltAlg/src/include)
+include_directories (../../../../libs/FiltAlgVirtVol/src/include)
+include_directories (../../../../libs/Fmq/src/include)
+include_directories (../../../../libs/Mdv/src/include)
 include_directories (../../../../libs/Ncxx/src/include)
 include_directories (../../../../libs/Radx/src/include)
-include_directories (../../../../libs/radar/src/include)
-include_directories (../../../../libs/toolsa/src/include)
-include_directories (../../../../libs/didss/src/include)
-include_directories (../../../../libs/dsserver/src/include)
-include_directories (../../../../libs/dsdata/src/include)
-include_directories (../../../../libs/rapformats/src/include)
-include_directories (../../../../libs/qtplot/src/include)
-include_directories (../../../../libs/rapplot/src/include)
-include_directories (../../../../libs/rapmath/src/include)
-include_directories (../../../../libs/titan/src/include)
-include_directories (../../../../libs/Mdv/src/include)
-include_directories (../../../../libs/Fmq/src/include)
+include_directories (../../../../libs/Refract/src/include)
+include_directories (../../../../libs/Solo/src/include)
 include_directories (../../../../libs/Spdb/src/include)
+include_directories (../../../../libs/advect/src/include)
+include_directories (../../../../libs/cidd/src/include)
+include_directories (../../../../libs/contour/src/include)
+include_directories (../../../../libs/dataport/src/include)
+include_directories (../../../../libs/didss/src/include)
+include_directories (../../../../libs/dsdata/src/include)
+include_directories (../../../../libs/dsserver/src/include)
+include_directories (../../../../libs/euclid/src/include)
+include_directories (../../../../libs/grib/src/include)
+include_directories (../../../../libs/grib2/src/include)
+include_directories (../../../../libs/hydro/src/include)
+include_directories (../../../../libs/kd/src/include)
+include_directories (../../../../libs/physics/src/include)
+include_directories (../../../../libs/qtplot/src/include)
+include_directories (../../../../libs/radar/src/include)
+include_directories (../../../../libs/rapformats/src/include)
+include_directories (../../../../libs/rapmath/src/include)
+include_directories (../../../../libs/rapplot/src/include)
+include_directories (../../../../libs/shapelib/src/include)
+include_directories (../../../../libs/tdrp/src/include)
+include_directories (../../../../libs/titan/src/include)
+include_directories (../../../../libs/toolsa/src/include)
 include_directories (${CMAKE_INSTALL_PREFIX}/include)
 if (DEFINED X11_X11_INCLUDE_PATH)
   include_directories (${X11_X11_INCLUDE_PATH})
