adding apps/radar/HcrTempRxGain to core build

--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -35,6 +35,7 @@ add_subdirectory (HawkEdit)
 add_subdirectory (HcrTempRxGain)
 add_subdirectory (HcrVelCorrect)
 add_subdirectory (Hsrl2Radx)
+add_subdirectory (HcrTempRxGain)
 add_subdirectory (IntfRemove)
 add_subdirectory (IpsEye)
 add_subdirectory (IpsTsArchive)
