build/cmake/createCMakeLists.py - adding /home/mdtest/homebrew as a search path for qt5

--- a/codebase/apps/radar/src/HawkEdit/CMakeLists.txt
+++ b/codebase/apps/radar/src/HawkEdit/CMakeLists.txt
@@ -79,6 +79,8 @@ set (SRCS
       SpreadSheetView.cc
       SpreadSheetController.cc
       SpreadSheetDelegate.cc
+      StatusPanelController.cc
+      StatusPanelView.cc
       SweepView.cc
       TimeNavView.cc
       FunctionEditor.cc
