--- a/codebase/apps/radar/src/Qucid/Makefile.qmake
+++ b/codebase/apps/radar/src/Qucid/Makefile.qmake
@@ -52,13 +52,15 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = Params.cc \
-		Csyprod_P.cc \
+SOURCES       = Csyprod_P.cc \
 		Cdraw_P.cc \
 		Cgui_P.cc \
 		Cimages_P.cc \
 		Cterrain_P.cc \
 		Croutes_P.cc \
+		DisplayField.cc \
+		DisplayManager.cc \
+		Params.cc \
 		Product.cc \
 		ProductMgr.cc \
 		RenderContext.cc \
@@ -145,6 +147,7 @@ SOURCES       = Params.cc \
 		render_xsect_winds.cc \
 		route_winds_init.cc \
 		shmem_init.cc \
+		SoloDefaultColorWrapper.cc \
 		status_pu_proc.cc \
 		symprod_init.cc \
 		timer_control.cc \
@@ -152,14 +155,17 @@ SOURCES       = Params.cc \
 		winds_init.cc \
 		xview_file_access.cc \
 		Uparams.cc \
-		zoom_pu_proc.cc qrc_resources.cpp
-OBJECTS       = Params.o \
-		Csyprod_P.o \
+		zoom_pu_proc.cc qrc_resources.cpp \
+		moc_DisplayManager.cpp
+OBJECTS       = Csyprod_P.o \
 		Cdraw_P.o \
 		Cgui_P.o \
 		Cimages_P.o \
 		Cterrain_P.o \
 		Croutes_P.o \
+		DisplayField.o \
+		DisplayManager.o \
+		Params.o \
 		Product.o \
 		ProductMgr.o \
 		RenderContext.o \
@@ -246,6 +252,7 @@ OBJECTS       = Params.o \
 		render_xsect_winds.o \
 		route_winds_init.o \
 		shmem_init.o \
+		SoloDefaultColorWrapper.o \
 		status_pu_proc.o \
 		symprod_init.o \
 		timer_control.o \
@@ -254,7 +261,8 @@ OBJECTS       = Params.o \
 		xview_file_access.o \
 		Uparams.o \
 		zoom_pu_proc.o \
-		qrc_resources.o
+		qrc_resources.o \
+		moc_DisplayManager.o
 DIST          = /../lib64/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib64/qt5/mkspecs/common/unix.conf \
 		/usr/lib64/qt5/mkspecs/common/linux.conf \
@@ -371,21 +379,26 @@ DIST          = /../lib64/qt5/mkspecs/features/spec_pre.prf \
 		Cimages_P.hh \
 		Cterrain_P.hh \
 		Croutes_P.hh \
+		DisplayField.hh \
+		DisplayManager.hh \
+		Params.hh \
 		Product.hh \
 		ProductMgr.hh \
 		RenderContext.hh \
+		SoloDefaultColorWrapper.hh \
 		SymprodRender.hh \
 		SymprodRenderObj.hh \
 		TimeList.hh \
 		TimePlot.hh \
-		Params.hh \
-		Uparams.hh Params.cc \
-		Csyprod_P.cc \
+		Uparams.hh Csyprod_P.cc \
 		Cdraw_P.cc \
 		Cgui_P.cc \
 		Cimages_P.cc \
 		Cterrain_P.cc \
 		Croutes_P.cc \
+		DisplayField.cc \
+		DisplayManager.cc \
+		Params.cc \
 		Product.cc \
 		ProductMgr.cc \
 		RenderContext.cc \
@@ -472,6 +485,7 @@ DIST          = /../lib64/qt5/mkspecs/features/spec_pre.prf \
 		render_xsect_winds.cc \
 		route_winds_init.cc \
 		shmem_init.cc \
+		SoloDefaultColorWrapper.cc \
 		status_pu_proc.cc \
 		symprod_init.cc \
 		timer_control.cc \
@@ -704,8 +718,8 @@ distdir: FORCE
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents resources.qrc $(DISTDIR)/
 	$(COPY_FILE) --parents /../lib64/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents cidd.h cidd_colorscales.h cidd_contours.h cidd_field_data.h cidd_funcs.h cidd_layers.h cidd_macros.h cidd_movies.h cidd_overlays.h cidd_params.h cidd_products.h cidd_structs.h cidd_winds.h cidd_windows.h Csyprod_P.hh Cdraw_P.hh Cgui_P.hh Cimages_P.hh Cterrain_P.hh Croutes_P.hh Product.hh ProductMgr.hh RenderContext.hh SymprodRender.hh SymprodRenderObj.hh TimeList.hh TimePlot.hh Params.hh Uparams.hh $(DISTDIR)/
-	$(COPY_FILE) --parents Params.cc Csyprod_P.cc Cdraw_P.cc Cgui_P.cc Cimages_P.cc Cterrain_P.cc Croutes_P.cc Product.cc ProductMgr.cc RenderContext.cc SymprodRender.cc SymprodRenderObj.cc TimeList.cc TimePlot.cc cidd_coords.cc cidd_font.cc cidd_init.cc cidd_main.cc cidd_params.cc cidd_remote_commands.cc cidd_reset.cc cidd_signals.cc colorscales.cc contours.cc data_gather.cc data_init.cc data_io.cc data_pu_proc.cc draw_export_init.cc draw_pu_proc.cc fields_pu_proc.cc graphic_canvas_events.cc graphic_canvas_events_bkwd.cc graphic_check.cc graphic_compute.cc graphic_cross_section.cc graphic_dump_image.cc graphic_manage.cc graphic_margin_events.cc graphic_panel.cc graphic_reset.cc graphic_resize.cc graphic_xsect_canvas_events.cc graphic_xsect_resize.cc graphic_zoom.cc gui_destroy.cc gui_init.cc gui_label_frame.cc gui_modify.cc h_win_proc.cc mdvx_data_request.cc movie_control.cc movie_frame_retrieve.cc movie_frame_save.cc movie_pu_proc.cc overlay_init.cc page_pu_proc.cc process_args.cc render_azimuths.cc render_bottom_margin.cc render_cart_grid.cc render_cbar.cc render_click_marks.cc render_control.cc render_distorted_grid.cc render_filled_contours.cc render_filled_image.cc render_grids.cc render_ht_sel.cc render_left_margin.cc render_legends.cc render_line_contours.cc render_margins.cc render_movie_frame.cc render_overlays.cc render_polar_grid.cc render_products.cc render_range_rings.cc render_right_margin.cc render_route_winds.cc render_terrain.cc render_top_layers.cc render_top_margin.cc render_winds.cc render_xsect_control.cc render_xsect_grids.cc render_xsect_line_contours.cc render_xsect_margins.cc render_xsect_products.cc render_xsect_top_layers.cc render_xsect_winds.cc route_winds_init.cc shmem_init.cc status_pu_proc.cc symprod_init.cc timer_control.cc v_win_proc.cc winds_init.cc xview_file_access.cc Uparams.cc zoom_pu_proc.cc $(DISTDIR)/
+	$(COPY_FILE) --parents cidd.h cidd_colorscales.h cidd_contours.h cidd_field_data.h cidd_funcs.h cidd_layers.h cidd_macros.h cidd_movies.h cidd_overlays.h cidd_params.h cidd_products.h cidd_structs.h cidd_winds.h cidd_windows.h Csyprod_P.hh Cdraw_P.hh Cgui_P.hh Cimages_P.hh Cterrain_P.hh Croutes_P.hh DisplayField.hh DisplayManager.hh Params.hh Product.hh ProductMgr.hh RenderContext.hh SoloDefaultColorWrapper.hh SymprodRender.hh SymprodRenderObj.hh TimeList.hh TimePlot.hh Uparams.hh $(DISTDIR)/
+	$(COPY_FILE) --parents Csyprod_P.cc Cdraw_P.cc Cgui_P.cc Cimages_P.cc Cterrain_P.cc Croutes_P.cc DisplayField.cc DisplayManager.cc Params.cc Product.cc ProductMgr.cc RenderContext.cc SymprodRender.cc SymprodRenderObj.cc TimeList.cc TimePlot.cc cidd_coords.cc cidd_font.cc cidd_init.cc cidd_main.cc cidd_params.cc cidd_remote_commands.cc cidd_reset.cc cidd_signals.cc colorscales.cc contours.cc data_gather.cc data_init.cc data_io.cc data_pu_proc.cc draw_export_init.cc draw_pu_proc.cc fields_pu_proc.cc graphic_canvas_events.cc graphic_canvas_events_bkwd.cc graphic_check.cc graphic_compute.cc graphic_cross_section.cc graphic_dump_image.cc graphic_manage.cc graphic_margin_events.cc graphic_panel.cc graphic_reset.cc graphic_resize.cc graphic_xsect_canvas_events.cc graphic_xsect_resize.cc graphic_zoom.cc gui_destroy.cc gui_init.cc gui_label_frame.cc gui_modify.cc h_win_proc.cc mdvx_data_request.cc movie_control.cc movie_frame_retrieve.cc movie_frame_save.cc movie_pu_proc.cc overlay_init.cc page_pu_proc.cc process_args.cc render_azimuths.cc render_bottom_margin.cc render_cart_grid.cc render_cbar.cc render_click_marks.cc render_control.cc render_distorted_grid.cc render_filled_contours.cc render_filled_image.cc render_grids.cc render_ht_sel.cc render_left_margin.cc render_legends.cc render_line_contours.cc render_margins.cc render_movie_frame.cc render_overlays.cc render_polar_grid.cc render_products.cc render_range_rings.cc render_right_margin.cc render_route_winds.cc render_terrain.cc render_top_layers.cc render_top_margin.cc render_winds.cc render_xsect_control.cc render_xsect_grids.cc render_xsect_line_contours.cc render_xsect_margins.cc render_xsect_products.cc render_xsect_top_layers.cc render_xsect_winds.cc route_winds_init.cc shmem_init.cc SoloDefaultColorWrapper.cc status_pu_proc.cc symprod_init.cc timer_control.cc v_win_proc.cc winds_init.cc xview_file_access.cc Uparams.cc zoom_pu_proc.cc $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -748,8 +762,59 @@ compiler_moc_predefs_clean:
 moc_predefs.h: /../lib64/qt5/mkspecs/features/data/dummy.cpp
 	g++ -pipe -g -dM -E -o moc_predefs.h /../lib64/qt5/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all:
+compiler_moc_header_make_all: moc_DisplayManager.cpp
 compiler_moc_header_clean:
+	-$(DEL_FILE) moc_DisplayManager.cpp
+moc_DisplayManager.cpp: DisplayManager.hh \
+		Args.hh \
+		/usr/local/lrose/include/tdrp/tdrp.h \
+		/usr/local/lrose/include/tdrp/tdrp_p.h \
+		/usr/local/lrose/include/tdrp/tdrpbuf.h \
+		/usr/local/lrose/include/tdrp/tdrp_obsolete.h \
+		Params.hh \
+		/usr/local/lrose/include/qtplot/ColorMap.hh \
+		/usr/local/lrose/include/euclid/SunPosn.hh \
+		/usr/local/lrose/include/Radx/RadxTime.hh \
+		/usr/local/lrose/include/Radx/RadxRay.hh \
+		/usr/local/lrose/include/Radx/Radx.hh \
+		/usr/local/lrose/include/Radx/RadxRangeGeom.hh \
+		/usr/local/lrose/include/Radx/RadxField.hh \
+		/usr/local/lrose/include/Radx/RadxPacking.hh \
+		/usr/local/lrose/include/Radx/RadxBuf.hh \
+		/usr/local/lrose/include/Radx/RadxMsg.hh \
+		/usr/local/lrose/include/Radx/RadxRemap.hh \
+		/usr/local/lrose/include/Radx/RadxPlatform.hh \
+		/usr/local/lrose/include/Radx/RadxVol.hh \
+		/usr/local/lrose/include/Radx/RadxArray.hh \
+		/usr/local/lrose/include/Radx/RadxGeoref.hh \
+		/usr/local/lrose/include/radar/ClickPointFmq.hh \
+		/usr/local/lrose/include/Fmq/DsFmq.hh \
+		/usr/local/lrose/include/Fmq/Fmq.hh \
+		/usr/local/lrose/include/toolsa/compress.h \
+		/usr/local/lrose/include/dataport/port_types.h \
+		/usr/local/lrose/include/toolsa/MemBuf.hh \
+		/usr/local/lrose/include/Fmq/FmqDeviceFile.hh \
+		/usr/local/lrose/include/Fmq/FmqDevice.hh \
+		/usr/local/lrose/include/toolsa/heartbeat.h \
+		/usr/local/lrose/include/Fmq/FmqDeviceShmem.hh \
+		/usr/local/lrose/include/Fmq/DsFmqMsg.hh \
+		/usr/local/lrose/include/dsserver/DsServerMsg.hh \
+		/usr/local/lrose/include/didss/DsMessage.hh \
+		/usr/local/lrose/include/didss/ds_message.h \
+		/usr/local/lrose/include/didss/DsURL.hh \
+		/usr/local/lrose/include/toolsa/URL.hh \
+		/usr/local/lrose/include/toolsa/Socket.hh \
+		/usr/local/lrose/include/toolsa/SockUtil.hh \
+		/usr/local/lrose/include/toolsa/DateTime.hh \
+		/usr/local/lrose/include/toolsa/DeltaTime.hh \
+		/usr/local/lrose/include/toolsa/udatetime.h \
+		/usr/local/lrose/include/toolsa/os_config.h \
+		/usr/local/lrose/include/radar/BeamHeight.hh \
+		/usr/local/lrose/include/toolsa/TaArray2D.hh \
+		moc_predefs.h \
+		/../lib64/qt5/bin/moc
+	/../lib64/qt5/bin/moc $(DEFINES) --include /home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid/moc_predefs.h -I/../lib64/qt5/mkspecs/linux-g++ -I/home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid -I/usr/include/qt5/QtCore -I/usr/include/qt5 -I/home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid/-DQT_WIDGETS_LIB -I/usr/include/qt5/QtWidgets -I/usr/include/qt5/QtGui -I/home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid/-DQT_GUI_LIB -I/home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid/-DQT_QML_LIB -I/usr/include/qt5/QtQml -I/home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid/-DQT_NETWORK_LIB -I/usr/include/qt5/QtNetwork -I/home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid/-DQT_CORE_LIB -I/usr/local/include -I/usr/local/lrose/include -I'/home/dixon/git/lrose-core/codebase/apps/radar/src/Qucid/$(HOME)/lrose/include' -I/home/dixon/lrose/include -I/usr/include/c++/8 -I/usr/include/c++/8/x86_64-redhat-linux -I/usr/include/c++/8/backward -I/usr/lib/gcc/x86_64-redhat-linux/8/include -I/usr/local/include -I/usr/include DisplayManager.hh -o moc_DisplayManager.cpp
+
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
 compiler_moc_source_make_all:
@@ -762,16 +827,9 @@ compiler_yacc_impl_make_all:
 compiler_yacc_impl_clean:
 compiler_lex_make_all:
 compiler_lex_clean:
-compiler_clean: compiler_rcc_clean compiler_moc_predefs_clean 
+compiler_clean: compiler_rcc_clean compiler_moc_predefs_clean compiler_moc_header_clean 
 
 ####### Compile
-
-Params.o: Params.cc Params.hh \
-		/usr/local/lrose/include/tdrp/tdrp.h \
-		/usr/local/lrose/include/tdrp/tdrp_p.h \
-		/usr/local/lrose/include/tdrp/tdrpbuf.h \
-		/usr/local/lrose/include/tdrp/tdrp_obsolete.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Params.o Params.cc
 
 Csyprod_P.o: Csyprod_P.cc Csyprod_P.hh \
 		/usr/local/lrose/include/tdrp/tdrp.h \
@@ -814,6 +872,109 @@ Croutes_P.o: Croutes_P.cc Croutes_P.hh \
 		/usr/local/lrose/include/tdrp/tdrpbuf.h \
 		/usr/local/lrose/include/tdrp/tdrp_obsolete.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Croutes_P.o Croutes_P.cc
+
+DisplayField.o: DisplayField.cc DisplayField.hh \
+		/usr/local/lrose/include/qtplot/ColorMap.hh \
+		SoloDefaultColorWrapper.hh \
+		SiiPalette.hh \
+		ColorTableManager.hh
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o DisplayField.o DisplayField.cc
+
+DisplayManager.o: DisplayManager.cc DisplayManager.hh \
+		Args.hh \
+		/usr/local/lrose/include/tdrp/tdrp.h \
+		/usr/local/lrose/include/tdrp/tdrp_p.h \
+		/usr/local/lrose/include/tdrp/tdrpbuf.h \
+		/usr/local/lrose/include/tdrp/tdrp_obsolete.h \
+		Params.hh \
+		/usr/local/lrose/include/qtplot/ColorMap.hh \
+		/usr/local/lrose/include/euclid/SunPosn.hh \
+		/usr/local/lrose/include/Radx/RadxTime.hh \
+		/usr/local/lrose/include/Radx/RadxRay.hh \
+		/usr/local/lrose/include/Radx/Radx.hh \
+		/usr/local/lrose/include/Radx/RadxRangeGeom.hh \
+		/usr/local/lrose/include/Radx/RadxField.hh \
+		/usr/local/lrose/include/Radx/RadxPacking.hh \
+		/usr/local/lrose/include/Radx/RadxBuf.hh \
+		/usr/local/lrose/include/Radx/RadxMsg.hh \
+		/usr/local/lrose/include/Radx/RadxRemap.hh \
+		/usr/local/lrose/include/Radx/RadxPlatform.hh \
+		/usr/local/lrose/include/Radx/RadxVol.hh \
+		/usr/local/lrose/include/Radx/RadxArray.hh \
+		/usr/local/lrose/include/Radx/RadxGeoref.hh \
+		/usr/local/lrose/include/radar/ClickPointFmq.hh \
+		/usr/local/lrose/include/Fmq/DsFmq.hh \
+		/usr/local/lrose/include/Fmq/Fmq.hh \
+		/usr/local/lrose/include/toolsa/compress.h \
+		/usr/local/lrose/include/dataport/port_types.h \
+		/usr/local/lrose/include/toolsa/MemBuf.hh \
+		/usr/local/lrose/include/Fmq/FmqDeviceFile.hh \
+		/usr/local/lrose/include/Fmq/FmqDevice.hh \
+		/usr/local/lrose/include/toolsa/heartbeat.h \
+		/usr/local/lrose/include/Fmq/FmqDeviceShmem.hh \
+		/usr/local/lrose/include/Fmq/DsFmqMsg.hh \
+		/usr/local/lrose/include/dsserver/DsServerMsg.hh \
+		/usr/local/lrose/include/didss/DsMessage.hh \
+		/usr/local/lrose/include/didss/ds_message.h \
+		/usr/local/lrose/include/didss/DsURL.hh \
+		/usr/local/lrose/include/toolsa/URL.hh \
+		/usr/local/lrose/include/toolsa/Socket.hh \
+		/usr/local/lrose/include/toolsa/SockUtil.hh \
+		/usr/local/lrose/include/toolsa/DateTime.hh \
+		/usr/local/lrose/include/toolsa/DeltaTime.hh \
+		/usr/local/lrose/include/toolsa/udatetime.h \
+		/usr/local/lrose/include/toolsa/os_config.h \
+		/usr/local/lrose/include/radar/BeamHeight.hh \
+		/usr/local/lrose/include/toolsa/TaArray2D.hh \
+		DisplayField.hh \
+		Reader.hh \
+		/usr/local/lrose/include/toolsa/TaThread.hh \
+		/usr/local/lrose/include/radar/IwrfMomReader.hh \
+		/usr/local/lrose/include/toolsa/pmu.h \
+		/usr/local/lrose/include/toolsa/procmap.h \
+		/usr/local/lrose/include/didss/DsInputPath.hh \
+		/usr/local/lrose/include/didss/LdataInfo.hh \
+		/usr/local/lrose/include/toolsa/umisc.h \
+		/usr/local/lrose/include/toolsa/port.h \
+		/usr/local/lrose/include/toolsa/mem.h \
+		/usr/local/lrose/include/toolsa/membuf.h \
+		/usr/local/lrose/include/toolsa/ushmem.h \
+		/usr/local/lrose/include/toolsa/uusleep.h \
+		/usr/local/lrose/include/toolsa/ucopyright.h \
+		/usr/local/lrose/include/toolsa/fmq.h \
+		/usr/local/lrose/include/didss/DsMsgPart.hh \
+		/usr/local/lrose/include/rapformats/DsRadarMsg.hh \
+		/usr/local/lrose/include/rapformats/ds_radar.h \
+		/usr/local/lrose/include/rapformats/DsRadarParams.hh \
+		/usr/local/lrose/include/rapformats/DsFieldParams.hh \
+		/usr/local/lrose/include/rapformats/DsRadarBeam.hh \
+		/usr/local/lrose/include/rapformats/DsPlatformGeoref.hh \
+		/usr/local/lrose/include/rapformats/DsRadarFlags.hh \
+		/usr/local/lrose/include/rapformats/DsRadarCalib.hh \
+		/usr/local/lrose/include/rapformats/ds_radar_calib.h \
+		/usr/local/lrose/include/radar/IwrfTsInfo.hh \
+		/usr/local/lrose/include/radar/iwrf_functions.hh \
+		/usr/local/lrose/include/radar/iwrf_data.h \
+		/usr/local/lrose/include/radar/iwrf_user_interface.h \
+		/usr/local/lrose/include/radar/iwrf_rsm.h \
+		/usr/local/lrose/include/radar/IwrfCalib.hh \
+		/usr/local/lrose/include/Radx/RadxEvent.hh \
+		/usr/local/lrose/include/Radx/RadxRcalib.hh \
+		/usr/local/lrose/include/toolsa/toolsa_macros.h \
+		/usr/local/lrose/include/toolsa/LogStream.hh \
+		/usr/local/lrose/include/toolsa/copyright.h \
+		/usr/local/lrose/include/toolsa/LogFile.hh \
+		/usr/local/lrose/include/toolsa/TaXml.hh \
+		/usr/local/lrose/include/Radx/RadxFile.hh \
+		/usr/local/lrose/include/Radx/RadxTimeList.hh
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o DisplayManager.o DisplayManager.cc
+
+Params.o: Params.cc Params.hh \
+		/usr/local/lrose/include/tdrp/tdrp.h \
+		/usr/local/lrose/include/tdrp/tdrp_p.h \
+		/usr/local/lrose/include/tdrp/tdrpbuf.h \
+		/usr/local/lrose/include/tdrp/tdrp_obsolete.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Params.o Params.cc
 
 Product.o: Product.cc Product.hh \
 		Csyprod_P.hh \
@@ -12811,6 +12972,12 @@ shmem_init.o: shmem_init.cc cidd.h \
 		TimeList.hh
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o shmem_init.o shmem_init.cc
 
+SoloDefaultColorWrapper.o: SoloDefaultColorWrapper.cc SoloDefaultColorWrapper.hh \
+		SiiPalette.hh \
+		/usr/local/lrose/include/qtplot/ColorMap.hh \
+		ColorTableManager.hh
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o SoloDefaultColorWrapper.o SoloDefaultColorWrapper.cc
+
 status_pu_proc.o: status_pu_proc.cc cidd.h \
 		/usr/local/lrose/include/toolsa/os_config.h \
 		/usr/local/lrose/include/dataport/port_types.h \
@@ -13824,6 +13991,9 @@ zoom_pu_proc.o: zoom_pu_proc.cc cidd.h \
 
 qrc_resources.o: qrc_resources.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qrc_resources.o qrc_resources.cpp
+
+moc_DisplayManager.o: moc_DisplayManager.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_DisplayManager.o moc_DisplayManager.cpp
 
 ####### Install
 
