apps/radar/Qucid - working on managers and widgets

--- a/codebase/apps/radar/src/Qucid/Makefile
+++ b/codebase/apps/radar/src/Qucid/Makefile
@@ -25,7 +25,7 @@
 #
 # Makefile for CIDD program
 #
-# Frank Hage RAP, NCAR, Boulder, CO, 80307, USA
+# Frank Hage EOL, NCAR, Boulder, CO, 80307, USA
 #
 ###########################################################################
 
